[TASK]Removed old credentials.

--- a/env.sample
+++ b/env.sample
@@ -1,4 +1,4 @@
-USERNAME=scarlett@arcane-tech.nl
-PASSWORD=qcdsmctqcypuztpo
-SERVER=imap.gmail.com
-DAEMON=
+USERNAME=email@provider.tld
+PASSWORD=password
+SERVER=server
+DAEMON=True
